[gd_scene load_steps=13 format=2]

[ext_resource path="res://textures/furniture/cabin_0.png" type="Texture" id=1]
[ext_resource path="res://textures/furniture/cabin_3_1.png" type="Texture" id=2]
[ext_resource path="res://textures/furniture/cabin_4_1.png" type="Texture" id=3]
[ext_resource path="res://textures/furniture/cabin_2_1.png" type="Texture" id=4]
[ext_resource path="res://textures/furniture/cabin_1.png" type="Texture" id=5]
[ext_resource path="res://scripts/1floor/toilet.gd" type="Script" id=6]
[ext_resource path="res://addons/JitterFreePixelArt.shader" type="Shader" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ) ],
"loop": false,
"name": "toilet_close",
"speed": 7.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": false,
"name": "toilet_open",
"speed": 7.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": false,
"name": "open_idle",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "New Anim",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "close_idle",
"speed": 7.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.45908, 2 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 9, 3 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 1 )

[node name="toilet" type="StaticBody2D"]
position = Vector2( 189, 104 )
script = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 2 )
animation = "New Anim"

[node name="enter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter"]
position = Vector2( 0, 29 )
shape = SubResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -13, -16, 13, -16, 13, 24, 9, 24, 9, 18, -9, 18, -9, 24, -13, 24 )

[node name="door" type="CollisionShape2D" parent="."]
position = Vector2( 0, 21 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]

[node name="speak" type="Area2D" parent="."]
position = Vector2( 96, -101 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="speak"]
shape = SubResource( 5 )
[connection signal="body_entered" from="enter" to="." method="_on_enter_body_entered"]
[connection signal="body_exited" from="enter" to="." method="_on_enter_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="speak" to="." method="_on_speak_body_entered"]
[connection signal="body_exited" from="speak" to="." method="_on_speak_body_exited"]
